fixed z-index header fixed
fixed z-index header fixed

--- a/resources/static/styles.css
+++ b/resources/static/styles.css
@@ -65,7 +65,7 @@ header.fixed {
     position: fixed;
     top: 0;
     box-shadow: 0 4px 5px 0 rgba(0, 0, 0, .14);
-    z-index: 1;
+    z-index: 10000;
     height: 70px;
 }
 
